# peach

./: .env.example  .gitignore  README.md  behavex.cfg  package-lock.json  pyproject.toml
features/: environment.py
features/specs/__init__/: getting-started.feature
features/specs/_samples_/: getting-started.feature
features/steps/: __init__.py
features/steps/expressions/: expressions_steps.py
features/steps/parameter_types/: parameter_types_steps.py
fixtures/context/: __init__.py
fixtures/context/attributes/: __init__.py
fixtures/context/attributes/browser/: __init__.py
fixtures/context/attributes/env/: __init__.py
fixtures/context/attributes/hooks/: __init__.py
fixtures/context/bindings/: __init__.py  attach_evidence.py
fixtures/utilities/assertions/: base_assertions.py
fixtures/utilities/formatters/: string_formatter.py
peach/: __init__.py  __main__.py  environment.py
peach/assertions/: base_assertions.py
peach/fixtures/: __init__.py
peach/fixtures/assertions/: __init__.py  base_assertions.py  dataframe_assertions.py  file_assertions.py  locator_assertions.py  page_assertions.py  polled_assertions.py
peach/fixtures/attributes/browser/: __init__.py
peach/fixtures/constants/: __init__.py  tags.py
peach/fixtures/context/: types.py
peach/fixtures/hooks/: __init__.py
peach/fixtures/page/: __init__.py
peach/fixtures/pages/: __init__.py
peach/fixtures/service/: __init__.py
peach/fixtures/services/: __init__.py  types.py
peach/gherkin/: __init__.py
peach/gherkin/expressions/: expressions_steps.py
peach/gherkin/parameter_types/: parameter_types_steps.py
peach/plugins/: plugin.py
peach/plugins/context/: __init__.py  types.py
peach/plugins/locator/: __init__.py  types.py
peach/plugins/page/: __init__.py  types.py
peach/steps/: __init__.py
peach/steps/_samples_/: __init__.py
peach/steps/expressions/: expressions_steps.py
peach/steps/parameter_types/: parameter_types_steps.py
peach/utilities/dataframe/: __init__.py
peach/utilities/datetime/: __init__.py  format_dt.py
peach/utilities/formatters/: json_formatter.py  string_formatter.py
peach/utilities/inspectors/: behave_inspector.py  class_inspector.py
peach/utilities/object/: __init__.py  format_obj.py  inspect_obj.py
peach/utilities/string/: format_str.py
src/iamkenos/peach/: __init__.py
test/: behavex.cfg
test/features/: environment.py  feature-one.feature
test/features/steps/: __init__.py  common_steps.py
(+41 files in other folders)
