[project]
name = "princess-peach"
version = "0.0.1"
description = ""
authors = [{ name = "iamkenos", email = "alexis.matunog@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["behavex>=4.0.5", "playwright>=1.40.0", "python-dotenv>=0.19.2"]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

